[FIXED] :: text alignement

--- a/src/scss/themes/_purchase.scss
+++ b/src/scss/themes/_purchase.scss
@@ -262,6 +262,7 @@ input.box-80{
 .purchase-selected-modal-3{
 	.column-1{
 		width: 300px;
+		padding-left: 25!important;
 	}
 	.column-2{
 		width: 80px;
